# tocogo

./: .gitignore  pyproject.toml
application/: app_config.py  app_manager.py  db_config.py  extentions.py  main.py
application/api/: __init__.py  auth_handlers.py  composite_handlers.py  crud.py  manager_handlers.py  task_handlers.py  user_handlers.py
application/api/actions/: __init__.py  auth.py  user.py
application/api/models/: __init__.py  auth.py  composites.py  tasks.py  users.py
application/db/: __init__.py  dals.py  engine.py  schemas.py
application/migrations/: env.py
application/migrations/versions/: 2024_07_18_1415-533b29571ba5_updated_auth_users_table.py  2024_07_24_0229-cb939bbc46e0_added_composite_table.py  2024_07_25_2228-cf0753ed3198_added_user_id_for_tasks.py  2024_07_25_2250-65005326fcdf_updated_closed_at_nullable_in_tasks_.py  56932c7f0e40_updated_column_is_active.py  577281ff0264_updated_table.py  a82d8d5c7ab1_added_column_roles.py  ac757baf4ae8_comment.py  af07da6a5f6a_added_new_table.py  c75f38b7f0ab_updated_none_params_users_table.py
application/security/: __init__.py  jwt.py  jwt_config.py
